Salesforce Training org/objects/Teacher__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR(  TODAY() )-YEAR( DOB__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Teacher</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Teacher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teachers</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VR_Experience_Year</fullName>
        <active>true</active>
        <description>This type of VR is used for validating whether this year is Correct or more educational year.</description>
        <errorConditionFormula>Age__c - 20 &lt; Experience__c</errorConditionFormula>
        <errorDisplayField>Experience__c</errorDisplayField>
        <errorMessage>Please input experience</errorMessage>
    </validationRules>
</CustomObject>